codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_approved_exec_renders_approved_request.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---






• Smart Approvals approved: rm -f /tmp/guardian-approved.sqlite Narrowly scoped to the requested file.


› Ask Codex to do anything

  ? for shortcuts                                                                                    100% context left
