codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_smart_access_runtime_mismatch_renders_warning.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---




⚠ Smart Access runtime mismatch: rm -f /tmp/runtime-mismatch.txt (risk ?;
  effects none; permit none; mismatch [Codex ES Daemon] Blocked protected
  delete: /tmp/runtime-mismatch.txt; reason PROTECTED_ZONE_AI_DELETE; class
  underpredicted; actual protected_delete:/tmp/runtime-mismatch.txt). Endpoint
  Security blocked the operation at runtime.


› Ask Codex to do anything

  ? for shortcuts                                                                                    100% context left
