codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_smart_access_trace_renders_permit_summary.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---





• Smart Approvals approved: rm -f /tmp/guardian-approved.sqlite Narrowly scoped to the requested file.

• Smart Access permit issued: rm -f /tmp/guardian-approved.sqlite (risk 14; effects protected_delete:/tmp/guardian-
approved.sqlite; permit protected_delete:/tmp/guardian-approved.sqlite ttl=120s; mismatch none)


› Ask Codex to do anything

  ? for shortcuts                                                                                    100% context left
