codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupt_clears_unified_exec_wait_streak.snap
---
source: tui/src/chatwidget/tests.rs
expression: snapshot
---
cells=2
• Ran just fix
  └ (no output)


■ Conversation interrupted - tell the model what to do differently. Something went wrong? Hit `/feedback` to report the issue.
